# stock-recap-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  recap_2026-04-24_daily.md  recap_2026-04-24_daily_wechat.txt  recap_system.db
.claude/skills/stock-recap/: SKILL.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE_AND_BUSINESS.md  extending-agents.md
src/agent_platform/: __init__.py  __main__.py
src/agent_platform/application/: __init__.py  agent.py  experiments.py  jobs.py  recap.py  recap_support.py
src/agent_platform/config/: __init__.py  settings.py
src/agent_platform/domain/: __init__.py  backtest_strategy.py  data_providers.py  models.py  registries.py  repositories.py  run_context.py
src/agent_platform/infrastructure/: __init__.py
src/agent_platform/interfaces/: __init__.py  cli.py  mcp_stdio.py
src/agent_platform/observability/: __init__.py  tracing.py  (+2 more)
src/stock_recap/: __init__.py  __main__.py  cli.py  core.py  db.py  models.py  settings.py
tests/: test_advanced_signals.py  test_api_stream.py  test_backends.py  test_backtest_strategies.py  test_budget.py  test_critic_retry.py  test_cross_market.py  test_data_providers.py  test_db.py  test_guardrails.py  test_jobs.py  test_llm_errors.py  test_llm_user_prompt.py  test_logging_setup.py  test_metrics.py  test_models.py  test_new_data_sources.py  test_new_signals_v2.py  test_outbox.py  test_output_rules.py  test_prompt_experiments.py  test_prompt_resources.py  test_prompt_version.py  test_providers.py  test_push_idempotency.py  test_recap_audit.py  test_registries.py  test_renderers.py  test_repositories.py  test_settings.py  test_skills.py  test_tenants.py  test_tool_policy.py
tests/fixtures/: __init__.py  ep_roots.py
tests/golden/: _compare.py  test_golden_messages.py  test_golden_renders.py
tests/replay/: _provider.py  conftest.py  test_replay_from_audit.py
(+236 files in other folders)
