[project]
name = "stock-recap"
version = "1.0.0"
description = "企业级 A 股日终复盘/次日策略智能体"
requires-python = ">=3.9"
dependencies = [
    "akshare",
    "apscheduler>=3.10.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "pytz>=2024.1",
    "tenacity>=8.3.0",
    "uvicorn[standard]>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_recap"]

[tool.uv]
dev-dependencies = []
