[project]
name = "stock-recap"
version = "1.0.0"
description = "企业级 A 股日终复盘/次日策略智能体"
requires-python = ">=3.10"
dependencies = [
    "akshare",
    "apscheduler>=3.10.0",
    "duckduckgo-search>=6.0.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "mcp>=1.8.0",
    "openai>=1.40.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "pytz>=2024.1",
    "pyyaml>=6.0",
    "tenacity>=8.3.0",
    "uvicorn[standard]>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_recap"]

[tool.hatch.build.targets.wheel.force-include]
"src/stock_recap/policy/rules.yaml" = "stock_recap/policy/rules.yaml"

# 下游包可扩展 Skills：在 wheel 的 pyproject 中声明
#   [project.entry-points."stock_recap.skills"]
#   acme = "acme_recap_skills:bundle_root"   # Path | str | () -> Path | str
[project.scripts]
stock-recap-mcp = "stock_recap.interfaces.mcp_stdio:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
